--- a/poly/makefile
+++ b/poly/makefile
@@ -1,16 +1,16 @@
 all: test_poly perf_poly
 
-GCC_OPT= -Wall
+GCC_OPT= -Wall -g
 
 perf_poly: perf_poly.o poly.o
-	gcc -o perf_poly perf_poly.o poly.o
+	gcc -o perf_poly perf_poly.o poly.o -lm
 
 perf_poly.o: perf_poly.c poly.h
 	gcc $(GCC_OPT) -c perf_poly.c
 
 
 test_poly: test_poly.o poly.o
-	gcc -o test_poly test_poly.o poly.o
+	gcc -o test_poly test_poly.o poly.o -lm
 
 test_poly.o: test_poly.c poly.h
 	gcc $(GCC_OPT) -c test_poly.c
