--- a/TP2/examples/Makefile
+++ b/TP2/examples/Makefile
@@ -1,4 +1,4 @@
-all: test_complexe4 test_complexe3 test_complexe2 test_complexe test_dot test_dot_dyn
+all: test_complexe4 test_complexe3 test_complexe2 test_complexe test_blas test_blas_dyn
 
 INC_DIR=../include
 
@@ -12,17 +12,17 @@ OPTIONS_COMPIL  =-Wall -O2 -fPIC -I$(INC_DIR)
 OPTIONS_LINK_STATIC  = -fopenmp -L$(LIB_DIR) $(LIBST)  
 OPTIONS_LINK_DYN     = -fopenmp -L$(LIB_DIR) $(LIBDYN)  
 
-test_dot: test_dot.o flop.o $(LIB_DIR)/libmnblas.a
-	gcc -o test_dot test_dot.o flop.o $(OPTIONS_LINK_STATIC)
+test_blas: test_blas.o flop.o $(LIB_DIR)/libmnblas.a
+	gcc -o test_blas test_blas.o flop.o $(OPTIONS_LINK_STATIC)
 
 flop.o: flop.c flop.h
 	gcc $(OPTIONS_COMPIL) -c flop.c
 
-test_dot_dyn: test_dot.o flop.o
-	gcc -o test_dot_dyn flop.o test_dot.o $(OPTIONS_LINK_DYN)
+test_blas_dyn: test_blas.o flop.o
+	gcc -o test_blas_dyn flop.o test_blas.o $(OPTIONS_LINK_DYN)
 
-test_dot.o: test_dot.c $(INC_DIR)/mnblas.h $(INC_DIR)/complexe.h
-	gcc $(OPTIONS_COMPIL) -c test_dot.c
+test_blas.o: test_blas.c $(INC_DIR)/mnblas.h $(INC_DIR)/complexe.h
+	gcc $(OPTIONS_COMPIL) -c test_blas.c
 
 test_complexe.o: test_complexe.c  $(INC_DIR)/complexe.h
 	gcc $(OPTIONS_COMPIL) -c test_complexe.c
@@ -51,4 +51,4 @@ test_complexe4: test_complexe4.o flop.o
 
 
 clean:
-	rm -f *.o test_dot test_dot_dyn test_complexe test_complexe2 test_complexe3 test_complexe4 *~
+	rm -f *.o test_blas test_blas_dyn test_complexe test_complexe2 test_complexe3 test_complexe4 *~
