--- a/TP2/src/Makefile
+++ b/TP2/src/Makefile
@@ -10,16 +10,16 @@ OPTIM=-O2 -fopenmp
 OPTIONS=-O2 -Wall -fPIC $(OPTIM) -I$(INC_DIR)
 # Bibliothèque statique
 
-libmnblas.a: copy.o swap.o dot.o axpy.o asum.o nrm2.o complexe.o
+libmnblas.a: copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
 	rm -f libmnblas.a $(LIB_DIR)/libmnblas.a
-	ar -r libmnblas.a copy.o swap.o dot.o axpy.o asum.o nrm2.o complexe.o
+	ar -r libmnblas.a copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
 	cp libmnblas.a $(LIB_DIR)
 
 # Bibliothèque dynamique
 
-libmnblasdyn.so:copy.o swap.o dot.o axpy.o asum.o nrm2.o complexe.o
+libmnblasdyn.so:copy.o swap.o dot.o axpy.o asum.o iamin.o nrm2.o complexe.o
 	rm -f libmnblasdyn.so $(LIB_DIR)/libmnblasdyn.so
-	gcc -shared -o libmnblasdyn.so copy.o swap.o dot.o axpy.o asum.o nrm2.o complexe.o
+	gcc -shared -o libmnblasdyn.so copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
 	cp libmnblasdyn.so $(LIB_DIR)
 
 complexe.o: $(INC_DIR)/complexe.h complexe.c
@@ -41,6 +41,12 @@ axpy.o : axpy.c $(INC_DIR)/mnblas.h
 
 asum.o : asum.c $(INC_DIR)/mnblas.h
 	gcc  $(OPTIONS) -c asum.c
+
+iamin.o : iamin.c $(INC_DIR)/mnblas.h
+	gcc  $(OPTIONS) -c iamin.c
+
+iamax.o : iamax.c $(INC_DIR)/mnblas.h
+	gcc  $(OPTIONS) -c iamax.c
 
 nrm2.o: nrm2.c $(INC_DIR)/mnblas.h
 	gcc  $(OPTIONS) -c nrm2.c
