--- a/TP2/src/Makefile
+++ b/TP2/src/Makefile
@@ -10,16 +10,16 @@ OPTIM=-O2 -fopenmp
 OPTIONS=-O2 -Wall -fPIC $(OPTIM) -I$(INC_DIR)
 # Bibliothèque statique
 
-libmnblas.a: copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
+libmnblas.a: copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o gemv.o gemm.o
 	rm -f libmnblas.a $(LIB_DIR)/libmnblas.a
-	ar -r libmnblas.a copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
+	ar -r libmnblas.a copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o gemv.o gemm.o
 	cp libmnblas.a $(LIB_DIR)
 
 # Bibliothèque dynamique
 
-libmnblasdyn.so:copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
+libmnblasdyn.so:copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o gemv.o gemm.o
 	rm -f libmnblasdyn.so $(LIB_DIR)/libmnblasdyn.so
-	gcc -shared -o libmnblasdyn.so copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o
+	gcc -shared -o libmnblasdyn.so copy.o swap.o dot.o axpy.o asum.o iamin.o iamax.o nrm2.o complexe.o gemv.o gemm.o
 	cp libmnblasdyn.so $(LIB_DIR)
 
 complexe.o: $(INC_DIR)/complexe.h complexe.c
@@ -52,9 +52,11 @@ nrm2.o: nrm2.c $(INC_DIR)/mnblas.h
 	gcc  $(OPTIONS) -c nrm2.c
 
 # BLAS 2
-
+gemv.o: gemv.c $(INC_DIR)/mnblas.h
+	gcc  $(OPTIONS) -c gemv.c
 # BLAS 3
-
+gemm.o: gemm.c $(INC_DIR)/mnblas.h
+	gcc  $(OPTIONS) -c gemm.c
 clean:
 	rm -f *.o *.a *.so *~  $(INC_DIR)/*~ $(LIB_DIR)/libmnblasdyn.so  $(LIB_DIR)/libmnblas.a ../lib/libmnblas.a ../lib/libmnblasdyn.so
 
